fix firefox padding issues and vertical and horizontal align middle of pseudo elements

--- a/src/css/resourceCal.scss
+++ b/src/css/resourceCal.scss
@@ -153,8 +153,8 @@ $spin: -15;
       color: white;
       cursor: pointer;
       z-index: 2;
-      margin: 2% 4%;
-      padding: 1%;
+      margin: 12px 4%;
+      padding: 4px 0;
 
       &[disabled] {
         cursor: not-allowed;
@@ -307,7 +307,7 @@ $spin: -15;
       flex-wrap: wrap;
       align-items: center;
       width: 100%;
-      padding: 2% 4%;
+      padding: 12px 4%;
       border-top: 1px solid #eaeaea;
 
       &.d-form-field-half {
@@ -671,6 +671,10 @@ $spin: -15;
           &:before {
             content: '';
             position: absolute;
+            top: calc(50% - 1.4rem);
+            bottom: calc(50% - 1.4rem);
+            left: calc(50% - 1.4rem);
+            right: calc(50% - 1.4rem);
             height: 2.8rem;
             width: 2.8rem;
             border-radius: 50%;
@@ -690,6 +694,8 @@ $spin: -15;
           &:after {
             content: '';
             position: absolute;
+            top: calc(50% - 1.4rem);
+            bottom: calc(50% - 1.4rem);
             width: 100%;
             height: 2.8rem;
             right: 0;
